AA-2008-01-04-0: Bugfix:    sol-x86 has to use special libjvm path 
                 Review:    CR

JG-2008-01-03-0: Enhancem.: Added test for IZ 1689 (correct submission time for
                            tasks of tightly integrated parallel jobs).
                 Review:    MD

AP-2008-01-03-0: Bugfix:    Tablespace and schema related fix.
                 Changed:   checktree_arco
                 Review:    JO

JO-2008-01-03-0: Bugfix:    Fix commit JO-2007-12-19-0

CR-2008-01-03-0: Bugfix:    first compile java build host as workaround for
                            inconsistent ant dependencies
                 Review:    AA

AP-2008-01-02-0: Enhancem.: Added test qmaster_spooling_issue2442 to 
                            system_tests/qmaster/spooling
                 Review:    JG

JG-2007-12-28-0: Enhandem.: Enhanced checks functional/usage and 
                            functional/tight_integration tests to test 
                            "accounting_summary" pe attribute.
                 Review:    HP

RD-2007-12-23-0: Bugfix:    fixed qmaster/advance_reservation test
                            broken due to interface changes 

HP-2007-12-21-0: Enhancem:  added support for new IJS
                 Changed:   checktree/install_core_system/init_cluster.tcl
                 Review:    MD

JO-2007-12-19-0: Enhancem:  added support for schemas
                 Review:    AP

CR-2007-12-19-0: Bugfix:    o fixed problem with open spawn session for multi
                              cluster support if different sge_root source
                              directory is used
                            o writing java build host long resolved into
                              build_testsuite.property file
                 Review:    RH

JG-2007-12-19-0: Bugfix:    Look for AR error message only with GE >= 62.
                 Review:    RD

OJ-2007-12-18-0: Enhance:   Added testcase for IZ 2441
                            at bugs/issuezilla/2441.